--- a/src/app/private-inner-project/private-inner-project.component.scss
+++ b/src/app/private-inner-project/private-inner-project.component.scss
@@ -241,6 +241,13 @@
   }
 }
 
+.scope-chip {
+  ion-icon {
+    margin: 0 6px 0 0;
+    font-size: 14px;
+  }
+}
+
 .state-chip {
   --background: var(--app-background-secondary);
   --color: var(--app-text);
