--- a/src/app/private-inner-project/private-inner-project.component.html
+++ b/src/app/private-inner-project/private-inner-project.component.html
@@ -35,8 +35,8 @@
 
           <div class="info-row">
             <div class="info-content">
-              <ion-chip color="primary">
-                <ion-icon [name]="getScopeIcon(project()?.scope || '')" style="margin-right: 8px;"></ion-icon>
+              <ion-chip color="primary" class="scope-chip">
+                <ion-icon [name]="getScopeIcon(project()?.scope || '')"></ion-icon>
                 {{ getScopeLabel(project()?.scope || '') }}
               </ion-chip>
               @if (project()?.scope?.place) {
