--- a/src/app/public-inner-project/public-inner-project.component.scss
+++ b/src/app/public-inner-project/public-inner-project.component.scss
@@ -72,6 +72,8 @@ ion-header {
         
         ion-icon {
           color: white;
+          margin: 0 6px 0 0;
+          font-size: 14px;
         }
       }
 
@@ -82,9 +84,13 @@ ion-header {
         text-transform: uppercase;
         letter-spacing: 0.5px;
         margin: 0 0 0 auto;
+        --background: var(--app-background-secondary);
+        --color: var(--app-text);
+        border: 1px solid var(--app-border-color);
+        border-radius: 8px;
         
         ion-icon {
-          margin: 0 px 0 0;
+          margin: 0 8px 0 0;
           font-size: 14px;
         }
       }
