--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -117,7 +117,7 @@
     }
 
     .implementation-progress {
-      margin: 12px 8px 16px;
+      margin: 6px;
       padding: 12px;
       background: var(--app-background-secondary);
       border-radius: 8px;
@@ -244,6 +244,8 @@
     }
 
     .project-needs {
+      margin: 12px 0;
+      
       .needs-list {
         margin: 0;
         padding-left: 20px;
