--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -5,8 +5,8 @@
         <ion-icon [name]="getScopeIcon(project().scope || '')" class="title-scope-icon"></ion-icon>
         <span class="title-text">{{ project().title }}</span>
         <ion-icon [name]="getStateIcon(project().state || 'building')" class="title-state-icon"></ion-icon>
-        @if (creatorData()?.projectSummary) {
-          <span class="creator-stats">{{ creatorData()!.projectSummary }}</span>
+        @if (totalProjectStats()) {
+          <span class="creator-stats">{{ totalProjectStats() }}</span>
         }
       </h3>
     </div>
