--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -74,125 +74,5 @@
     }
   </ion-card-content>
 
-  <app-project-footer
-    [project]="project()"
-    [expandedComments]="expandedComments()"
-    [expandedCollaborators]="expandedCollaborators()"
-    (onSupportClick)="onSupportClick.emit($event)"
-    (onOpposeClick)="onOpposeClick.emit($event)"
-    (onVerifyClick)="onVerifyClick.emit($event)"
-    (onFollowClick)="onFollowClick.emit($event)"
-    (onCommentsToggle)="onCommentsToggle.emit($event)"
-    (onCollaboratorsToggle)="onCollaboratorsToggle.emit($event)">
-  </app-project-footer>
-
-  <!-- Comments Section -->
-  @if (expandedComments()) {
-  <div class="comments-container">
-    <!-- Show comment input for all authenticated users -->
-    @if (user) {
-    <ion-item class="add-comment-section">
-      <ion-textarea
-        [(ngModel)]="newCommentText"
-        [placeholder]="'HOME.COMMENT_PLACEHENTER' | translate"
-        rows="2"
-        class="comment-textarea"
-        (keydown.enter)="onCommentKeydown($event)"
-      >
-      </ion-textarea>
-    </ion-item>
-    }
-
-    @if (project().comments && project().comments.length > 0) {
-    <div class="comments-list">
-      @for (comment of project().comments.slice().reverse(); track comment.id) {
-      <div class="comment-item">
-        <div class="comment-header">
-          <div class="comment-author">
-            <strong>{{ comment.creatorName }}</strong>
-          </div>
-          <div class="comment-date">
-            <small>{{ comment.createdAt | date : "short" }}</small>
-          </div>
-        </div>
-        <div class="comment-body">
-          <p class="comment-text">{{ comment.text }}</p>
-        </div>
-      </div>
-      }
-    </div>
-    }
-  </div>
-  }
-
-  <!-- Collaborators Section -->
-  @if (expandedCollaborators()) {
-  <div class="collaborators-container">
-    <!-- Creator Section -->
-    <div class="creator-section">
-      @if (creatorData()) {
-        <app-user-avatar
-          [user]="creatorData()!"
-          [variant]="'creator'"
-          [avatarSize]="'small'"
-          [showRole]="true"
-        >
-        </app-user-avatar>
-      }
-    </div>
-
-    <!-- Current Collaborators -->
-    <div class="collaborators-list">
-      @if (project().collaborators && project().collaborators.length > 0) { @for
-      (collaborator of project().collaborators; track collaborator.uid) {
-      <app-user-avatar
-        [user]="getCollaboratorData(collaborator)"
-        [variant]="'collaborator'"
-        [avatarSize]="'small'"
-        [showRole]="true"
-        [showJoinedDate]="true"
-      >
-      </app-user-avatar>
-      } } @else {
-      <p class="no-data">{{ "HOME.NO_COLLABORATORS" | translate }}</p>
-      }
-    </div>
-
-    <!-- Request Collaboration Button (for non-creators and non-collaborators) -->
-    @if (!isProjectCreator(project()) && !isProjectCollaborator(project()) &&
-    !hasCollaborationRequest(project()) && project().state !== 'done') {
-    <div class="request-collaboration-section">
-      <ion-item>
-        <ion-textarea
-          [(ngModel)]="collaborationMessage"
-          [placeholder]="'HOME.COLLABORATION_MESSAGE_PLACEHOLDER' | translate"
-          rows="2"
-          class="collaboration-textarea"
-        >
-        </ion-textarea>
-      </ion-item>
-      <ion-button
-        fill="clear"
-        size="small"
-        color="primary"
-        (click)="submitCollaborationRequest()"
-        class="request-collaboration-button"
-      >
-        {{ "HOME.REQUEST_COLLABORATION" | translate }}
-      </ion-button>
-    </div>
-    }
-
-    <!-- Show pending request status for users who have already requested -->
-    @if (!isProjectCreator(project()) && !isProjectCollaborator(project()) &&
-    hasCollaborationRequest(project())) {
-    <div class="pending-request-section">
-      <div class="pending-request-message">
-        <ion-icon name="time-outline" class="pending-icon"></ion-icon>
-        <span class="pending-text">{{ "HOME.COLLABORATION_REQUEST_PENDING" | translate }}</span>
-      </div>
-    </div>
-    }
-  </div>
-  }
+  <app-project-footer [project]="project()"></app-project-footer>
 </ion-card>
