--- a/src/app/components/project-footer/project-footer.component.html
+++ b/src/app/components/project-footer/project-footer.component.html
@@ -155,5 +155,41 @@
     <p class="no-data">{{ "HOME.NO_COLLABORATORS" | translate }}</p>
     }
   </div>
+
+  <!-- Request Collaboration Button (for non-creators and non-collaborators) -->
+  @if (!isProjectCreator(project()) && !isProjectCollaborator(project()) &&
+  !hasCollaborationRequest(project()) && project().state !== 'done') {
+  <div class="request-collaboration-section">
+    <ion-item>
+      <ion-textarea
+        [(ngModel)]="collaborationMessage"
+        [placeholder]="'HOME.COLLABORATION_MESSAGE_PLACEHOLDER' | translate"
+        rows="2"
+        class="collaboration-textarea"
+      >
+      </ion-textarea>
+    </ion-item>
+    <ion-button
+      fill="clear"
+      size="small"
+      color="primary"
+      (click)="submitCollaborationRequest()"
+      class="request-collaboration-button"
+    >
+      {{ "HOME.REQUEST_COLLABORATION" | translate }}
+    </ion-button>
+  </div>
+  }
+
+  <!-- Show pending request status for users who have already requested -->
+  @if (!isProjectCreator(project()) && !isProjectCollaborator(project()) &&
+  hasCollaborationRequest(project())) {
+  <div class="pending-request-section">
+    <div class="pending-request-message">
+      <ion-icon name="time-outline" class="pending-icon"></ion-icon>
+      <span class="pending-text">{{ "HOME.COLLABORATION_REQUEST_PENDING" | translate }}</span>
+    </div>
+  </div>
+  }
 </div>
 }
