--- a/src/app/components/project-card/project-card.component.html
+++ b/src/app/components/project-card/project-card.component.html
@@ -15,17 +15,6 @@
   <ion-card-content class="project-body" (click)="onProjectCardClick()">
     @if (project().description.trim() !== '') {
     <p class="project-description">{{ project().description }}</p>
-    } @if (project().state === 'done') {
-    <div class="project-stats">
-      <div class="stat-item">
-        <span class="stat-label">{{ "HOME.SUPPORT" | translate }}:</span>
-        <span class="stat-value">{{ (project().supports || []).length }}</span>
-      </div>
-      <div class="stat-item">
-        <span class="stat-label">{{ "HOME.OPPOSE" | translate }}:</span>
-        <span class="stat-value">{{ (project().opposes || []).length }}</span>
-      </div>
-    </div>
     } @if (project().media?.length) {
     <div class="project-media">
       <div class="media-grid">
@@ -74,6 +63,19 @@
         </button>
       </div>
       }
+    </div>
+    } @if (project().state === 'done') {
+    <div class="project-stats">
+      <div class="stat-item">
+        <ion-icon name="add" class="stat-icon support-icon"></ion-icon>
+        <span class="stat-label">{{ "HOME.SUPPORT" | translate }}:</span>
+        <span class="stat-value">{{ (project().supports || []).length }}</span>
+      </div>
+      <div class="stat-item">
+        <ion-icon name="remove" class="stat-icon oppose-icon"></ion-icon>
+        <span class="stat-label">{{ "HOME.OPPOSE" | translate }}:</span>
+        <span class="stat-value">{{ (project().opposes || []).length }}</span>
+      </div>
     </div>
     } @if (project().state === 'implementing') {
     <div class="implementation-progress">
