--- a/src/app/components/project-card/project-card.component.scss
+++ b/src/app/components/project-card/project-card.component.scss
@@ -68,7 +68,7 @@
       
       .project-title {
         margin: 0;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 400;
         color: var(--app-text);
         line-height: 1.5;
@@ -110,18 +110,17 @@
     padding: 0 !important;
 
     .project-description {
-      margin: 0 8px;
+      margin: 4px 1px 20px 1px;
       padding-left: 8px;
       border-left: 1px solid var(--ion-color-primary);
       font-size: 14px;
-      line-height: 1.4;
-      font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      line-height: 1.8;
       font-weight: 400;
       letter-spacing: 0.05em;
       color: var(--app-text);
       display: -webkit-box;
-      line-clamp: 4;
-      -webkit-line-clamp: 4;
+      line-clamp: 10;
+      -webkit-line-clamp: 10;
       -webkit-box-orient: vertical;
       overflow: hidden;
       text-overflow: ellipsis;
